Changelog for mk-index-usage:

2010-06-08: version 0.9.0

   * Initial release.